frontend_local_timezone_detection

--- a/TImeMachine/Layout/NavMenu.razor
+++ b/TImeMachine/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/localdatetimedetection">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Local Time Detection
+            </NavLink>
+        </div>
     </nav>
 </div>
 
