--- a/TImeMachine/Layout/NavMenu.razor
+++ b/TImeMachine/Layout/NavMenu.razor
@@ -29,6 +29,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Local Time Detection
             </NavLink>
         </div>
+        <!-- Schedule Event Application Menu-->
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/schedule-event">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Schedule Event
+            </NavLink>
+        </div>
     </nav>
 </div>
 
